--- a/home.html
+++ b/home.html
@@ -61,12 +61,15 @@
             
         </div>
         
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
-         integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" 
-         crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" 
-        integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" 
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" 
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" 
         crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" 
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" 
+        crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" 
+        crossorigin="anonymous"></script> 
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 
@@ -85,7 +88,7 @@
                     request.abort();
                 }
 
-                $('#shoelist').html("<div id='loading'><h3 style='color: rgb(255, 123, 123); text-align: center;'>Please Wait...</h3><img src='static/ajax-loader.gif'></div>");
+                $('#shoelist').html("<div id='loading'><h3 style='color: rgb(255, 123, 123); text-align: center;'>Please wait, this may take a moment...</h3><img src='static/ajax-loader.gif'></div>");
 
                 request = $.ajax(
                     {
@@ -114,7 +117,7 @@
                     request.abort();
                 }
 
-                $('#shoelist').html("<div id='loading'><h3 style='color: rgb(255, 123, 123); text-align: center;'>Please Wait...</h3><img src='static/ajax-loader.gif'></div>");
+                $('#shoelist').html("<div id='loading'><h3 style='color: rgb(255, 123, 123); text-align: center;'>Please wait, this may take a moment...</h3><img src='static/ajax-loader.gif'></div>");
 
                 request = $.ajax(
                     {
