--- a/home.html
+++ b/home.html
@@ -5,15 +5,12 @@
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" 
-        rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" 
-        crossorigin="anonymous"> -->
     </head>
 
     <body style="background-color: black;">
 
         <nav class="navbar">
-              <h1 style="text-align: center; color: rgb(255, 123, 123); margin-left: 10px;">Kicks Watch</h1>
+              <h1 style="text-align: center; color: rgb(255, 123, 123)"><strong>Kicks Watch</strong></h1>
         </nav>
 
         <div class="container">
@@ -24,7 +21,7 @@
             <div class="form-row">
                 <div class="col-md-4 mb-3">
                     <label for="month" class="form-label" style="color: rgb(255, 123, 123);">Month: </label>
-                    <select id="month" class="form-control" onchange="getDrops(value)">
+                    <select id="month" class="form-control" onchange="getDrops()">
                         <option value="January" selected="selected">January</option>
                         <option value="February">February</option>
                         <option value="March">March</option>
@@ -42,16 +39,20 @@
 
                 <div class="col-md-4 mb-3">
                     <label for="sort" class="form-label" style="color: rgb(255, 123, 123);">Sort By: </label>
-                    <select id="sort" class="form-control">
+                    <select id="sort" class="form-control" onchange="getDrops()">
                         <option value="date" selected="selected">Release Date</option>
-                        <option value="retail">Price: Retail</option>
-                        <option value="resale">Price: Resale</option>
-                        <option value="profit">Profit</option>
+                        <option value="retaillotohi">Retail Price (Low to High)</option>
+                        <option value="retailhitolo">Retail Price (High to Low)</option>
+                        <option value="resalelotohi">Resale Price (Low to High)</option>
+                        <option value="resalehitolo">Resale Price (High to Low)</option>
+                        <option value="profitlotohi">Profit (Low to High)</option>
+                        <option value="profithitolo">Profit (High to Low)</option>
                     </select>
                 </div>
+                    
+                <div class="col-md-4 mb-3">
+                    <button id="update" class="btn btn-primary" style="margin-top: 32px;" onclick="update()" style="text-align: right">Update</button>
 
-                <div class="col-md-4 mb-3" style="margin-bottom: 0px;">
-                    <button id="update" class="btn btn-primary" onclick="update()" style="text-align: right">Update</button>
                 </div>
                 
             </div>
@@ -79,10 +80,14 @@
 
             let request = null;
 
-            function getDrops(month){
-                month = encodeURIComponent(month);
+            function getDrops(){
+                let month = $('#month').val();
+                let sort = $('#sort').val()
 
-                let url = '/getDrops?month=' + month
+                month = encodeURIComponent(month);
+                sort = encodeURIComponent(sort);
+
+                let url = '/getDrops?month=' + month + '&sort=' + sort
 
                 if (request != null){
                     request.abort();
@@ -105,6 +110,7 @@
 
             function handleResponse2(response){
                 $('#shoelist').html(response);
+                $('#sort').val('date');
             }
 
             function update(){
@@ -129,7 +135,7 @@
             }
 
             function setup(){
-                getDrops($('#month').val());
+                getDrops();
             }
 
             $('document').ready(setup);
